# Snake

./: CMakeLists.txt  README.md
release/: README.txt
src/: main.cpp
